--- a/css/figuras.css
+++ b/css/figuras.css
@@ -47,6 +47,9 @@ p {
     font-weight: 400;
     color: var(--dark-blue);
 }
+em {
+    font-style: normal;
+}
 label {
     font-size: 1.2rem;
     color: var(--dark-blue);
